--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "make-runnable": "^1.3.10",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4"
   }
