--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "make-runnable": "^1.3.10",
     "mongodb": "^4.6.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "socket.io": "^4.5.1"
   }
 }
