--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "find-config": "^1.0.0",
     "mongoose": "^6.3.4",
+    "mysql": "^2.18.1",
     "socket.io": "^4.5.1"
   }
 }
