--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,6 @@ services:
       - "5432:5432"
     restart: always
     volumes:
-      - ./db/functions/init_tables.sql:/docker-entrypoint-initdb.d/init_tables.sql
+      - ./db/init/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/tables/:/docker-entrypoint-initdb.d/tables/
+      - ./db/functions/:/docker-entrypoint-initdb.d/functions/
